--- a/Alicargo/Views/Balance/History.cshtml
+++ b/Alicargo/Views/Balance/History.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Alicargo.Core.Resources
+@using Alicargo.Utilities.Localization
 @using Resources
 @using Alicargo.DataAccess.Contracts.Contracts.User
 @model ClientBalanceHistoryItem[]
@@ -35,7 +36,7 @@
 							@item.Timestamp.Date.ToShortDateString()
 						</td>
 						<td>
-							@Alicargo.DataAccess.Contracts.Resources.EventType.ResourceManager.GetString(item.EventType.ToString())
+							@item.EventType.ToLocalString()
 						</td>
 						<td>
 							@item.Money.ToString("N2")€
