SenderName in email

--- a/Alicargo/Views/EmailTemplate/Help.cshtml
+++ b/Alicargo/Views/EmailTemplate/Help.cshtml
@@ -56,6 +56,7 @@
 		<li>AirWaybillDateOfArrival - Дата прилета</li>
 		<li>AirWaybillGTD - ГТД</li>
 		<li>UploadedFile - Загруженный файл</li>
+		<li>SenderName - Имя отправителя</li>
 	</ul>
 </p>
 <p>
