edit city for forwarder

--- a/Alicargo/Content/app/common.css
+++ b/Alicargo/Content/app/common.css
@@ -289,7 +289,7 @@
 	width: auto;
 }
 
-.countries .k-multiselect {
+.multiselect .k-multiselect {
 	margin-bottom: 10px;
 	max-height: 200px;
 	overflow-x: hidden;
