--- a/Alicargo/Views/Sender/EditorTemplates/SenderModel.cshtml
+++ b/Alicargo/Views/Sender/EditorTemplates/SenderModel.cshtml
@@ -31,7 +31,7 @@
 	</div>
 </div>
 <div class="row">
-	<div class="span12 countries">
+	<div class="span12 multiselect">
 		@SelectCountries()
 	</div>
 </div>
