set forwarder event

--- a/Alicargo/Views/EmailTemplate/Help.cshtml
+++ b/Alicargo/Views/EmailTemplate/Help.cshtml
@@ -57,6 +57,7 @@
 		<li>AirWaybillGTD - ГТД</li>
 		<li>UploadedFile - Загруженный файл</li>
 		<li>SenderName - Имя отправителя</li>
+		<li>ForwarderName - Имя перевозчика</li>
 	</ul>
 </p>
 <p>
