--- a/Alicargo/Views/ApplicationList/Tools.cshtml
+++ b/Alicargo/Views/ApplicationList/Tools.cshtml
@@ -30,3 +30,9 @@ else if (IdentityService.IsInRole(RoleType.Forwarder))
 		@Html.ActionLink(Pages.Excel, MVC.Excel.Applications(), new { @class = "btn btn-info" })
 	</p>
 }
+else if(IdentityService.IsInRole(RoleType.Carrier))
+{
+	<p>
+		@Html.ActionLink(Pages.Excel, MVC.Excel.Applications(), new { @class = "btn btn-info" })
+	</p>
+}
