--- a/Alicargo/Views/Shared/Memu.cshtml
+++ b/Alicargo/Views/Shared/Memu.cshtml
@@ -19,6 +19,13 @@
 		<li>@Html.ActionLink(Pages.Applications, MVC.ApplicationList.Index())</li>
 	}
 }
+@helper CarrierMenu()
+{
+	if(IdentityService.IsInRole(RoleType.Carrier))
+	{
+		<li>@Html.ActionLink(Pages.Applications, MVC.ApplicationList.Index())</li>
+	}
+}
 @helper AdminMenu()
 {
 	if (IdentityService.IsInRole(RoleType.Admin))
@@ -32,6 +39,7 @@
 				<li>@Html.ActionLink(Pages.Admins, MVC.User.Index(RoleType.Admin))</li>
 				<li>@Html.ActionLink(Pages.Brokers, MVC.User.Index(RoleType.Broker))</li>
 				<li>@Html.ActionLink(Pages.Forwarders, MVC.User.Index(RoleType.Forwarder))</li>
+				<li>@Html.ActionLink(Pages.Carriers, MVC.User.Index(RoleType.Carrier))</li>
 				<li>@Html.ActionLink(Pages.Senders, MVC.User.Index(RoleType.Sender))</li>
 			</ul>
 		</li>
@@ -75,6 +83,7 @@
 					@SenderMenu()
 					@ForwarderMenu()
 					@AdminMenu()
+					@CarrierMenu()
 				</ul>
 				<ul class="nav pull-right">
 					<li>
