--- a/Alicargo/Views/Transit/EditorTemplates/TransitEditModel.cshtml
+++ b/Alicargo/Views/Transit/EditorTemplates/TransitEditModel.cshtml
@@ -1,25 +1,22 @@
-﻿@using System.Web.Mvc.Html
-@using Alicargo.MvcHelpers.Extensions
+﻿@using Alicargo.MvcHelpers.Extensions
 @model TransitEditModel
-
 <div class="row">
-	<div class="span4">
+	<div class="span3">
 		@Html.LabelFor(x => x.CityId)
 		@Html.DropDownListFor(x => x.CityId, (IDictionary<long, string>)ViewBag.Cities)
 		@Html.EditorWithLabelFor(model => model.Address)
-		@Html.EditorWithLabelFor(model => model.RecipientName)
-
 	</div>
-	<div class="span4">
+	<div class="span3">
+		@Html.EditorWithLabelFor(model => model.RecipientName)
+		@Html.EditorWithLabelFor(model => model.Phone)
+	</div>
+	<div class="span3">
 		@Html.LabelFor(model => model.MethodOfTransit)
 		@Html.DropDownListForEnum(model => model.MethodOfTransit)
 		@Html.LabelFor(model => model.DeliveryType)
-		@Html.DropDownListForEnum(model => model.DeliveryType)
-		@Html.EditorWithLabelFor(model => model.Phone)
-
+		@Html.DropDownListForEnum(model => model.DeliveryType)		
 	</div>
-	<div class="span4">
-		@Html.Action(MVC.Carrier.Select((long?)ViewBag.TransitId))
+	<div class="span3">
 		@Html.EditorWithLabelFor(model => model.WarehouseWorkingTime)
 	</div>
 </div>
