--- a/Alicargo/Views/EmailTemplate/EditorTemplates/EventTemplateModel.cshtml
+++ b/Alicargo/Views/EmailTemplate/EditorTemplates/EventTemplateModel.cshtml
@@ -1,4 +1,6 @@
-﻿@using Resources = Alicargo.DataAccess.Contracts.Resources
+﻿@using Alicargo.Core.Resources
+@using Alicargo.DataAccess.Contracts.Enums
+@using Resources = Alicargo.DataAccess.Contracts.Resources
 @using Alicargo.MvcHelpers.Extensions
 @using Resources
 @model Alicargo.ViewModels.EmailTemplate.EventTemplateModel
@@ -15,17 +17,28 @@
 			<b>
 				@Pages.StateSettings_Recipients:
 			</b>
-
-			@Html.CheckBoxFor(x => x.Settings.Admin)
-			@Html.LabelFor(x => x.Settings.Admin, Resources.Enums.Admin)
-			@Html.CheckBoxFor(x => x.Settings.Sender)
-			@Html.LabelFor(x => x.Settings.Sender, Resources.Enums.Sender)
-			@Html.CheckBoxFor(x => x.Settings.Broker)
-			@Html.LabelFor(x => x.Settings.Broker, Resources.Enums.Broker)
-			@Html.CheckBoxFor(x => x.Settings.Forwarder)
-			@Html.LabelFor(x => x.Settings.Forwarder, Resources.Enums.Forwarder)
-			@Html.CheckBoxFor(x => x.Settings.Client)
-			@Html.LabelFor(x => x.Settings.Client, Resources.Enums.Client)
+			@if(Model.EventType == EventType.BalanceDecreased || Model.EventType == EventType.BalanceIncreased)
+			{
+				@Html.CheckBoxFor(x => x.Settings.Admin)
+				@Html.LabelFor(x => x.Settings.Admin, Resources.Enums.Admin)
+				@Html.CheckBoxFor(x => x.Settings.Client)
+				@Html.LabelFor(x => x.Settings.Client, Resources.Enums.Client)
+			}
+			else
+			{
+				@Html.CheckBoxFor(x => x.Settings.Admin)
+				@Html.LabelFor(x => x.Settings.Admin, Resources.Enums.Admin)
+				@Html.CheckBoxFor(x => x.Settings.Sender)
+				@Html.LabelFor(x => x.Settings.Sender, Resources.Enums.Sender)
+				@Html.CheckBoxFor(x => x.Settings.Broker)
+				@Html.LabelFor(x => x.Settings.Broker, Resources.Enums.Broker)
+				@Html.CheckBoxFor(x => x.Settings.Forwarder)
+				@Html.LabelFor(x => x.Settings.Forwarder, Resources.Enums.Forwarder)
+				@Html.CheckBoxFor(x => x.Settings.Client)
+				@Html.LabelFor(x => x.Settings.Client, Resources.Enums.Client)
+				@Html.CheckBoxFor(x => x.Settings.Carrier)
+				@Html.LabelFor(x => x.Settings.Client, Entities.Carrier)
+			}
 		</p>
 	</div>
 </div>
