--- a/Alicargo/Views/EmailTemplate/Help.cshtml
+++ b/Alicargo/Views/EmailTemplate/Help.cshtml
@@ -28,7 +28,7 @@
 		<li>Torg12Files -  Название файла  ТОРГ12</li>
 		<li>DateOfCargoReceipt - Дата получения груза</li>
 		<li>TransitReference - Транзитный референс</li>
-		<li>TransitCarrierName - Перевозчик</li>
+		<li>CarrierName - Курьер</li>
 		<li>FactoryEmail - Email фабрики</li>
 		<li>FactoryPhone - Телефон фабрики</li>
 		<li>FactoryContact - Контактное лицо фабрики</li>
