--- a/Alicargo/Views/EmailTemplate/EditorTemplates/EventTemplateModel.cshtml
+++ b/Alicargo/Views/EmailTemplate/EditorTemplates/EventTemplateModel.cshtml
@@ -37,7 +37,7 @@
 				@Html.CheckBoxFor(x => x.Settings.Client)
 				@Html.LabelFor(x => x.Settings.Client, Resources.Enums.Client)
 				@Html.CheckBoxFor(x => x.Settings.Carrier)
-				@Html.LabelFor(x => x.Settings.Client, Entities.Carrier)
+				@Html.LabelFor(x => x.Settings.Carrier, Entities.Carrier)
 			}
 		</p>
 	</div>
