--- a/Alicargo/Views/ApplicationList/AdminDetails.cshtml
+++ b/Alicargo/Views/ApplicationList/AdminDetails.cshtml
@@ -123,7 +123,7 @@
 # } #
 # if(TransitCarrierName != null){ #
 <p>
-	<span>@Entities.CarrierName:</span>
+	<span>@Entities.Carrier:</span>
 	#= TransitCarrierName #
 </p>
 # } #
