--- a/Alicargo/Views/ApplicationList/ClientDetails.cshtml
+++ b/Alicargo/Views/ApplicationList/ClientDetails.cshtml
@@ -124,7 +124,7 @@
 # } #			
 # if(TransitCarrierName != null){ #
 <p>
-	<span>@Entities.CarrierName:</span>
+	<span>@Entities.Carrier:</span>
 	#= TransitCarrierName #				
 </p>
 # } #
