edit draw by admin

--- a/Alicargo/Views/AdminAwb/Create.cshtml
+++ b/Alicargo/Views/AdminAwb/Create.cshtml
@@ -5,4 +5,4 @@
 <h1>
 	@Pages.AirWaybillAdd
 </h1>
-@Html.EditPage(Url.Action(MVC.AirWaybill.Create()), Pages.AirWaybillAdd)
+@Html.EditPage(Url.Action(MVC.AdminAwb.Create()), Pages.AirWaybillAdd)
