--- a/Alicargo/Views/AdminAwb/Edit.cshtml
+++ b/Alicargo/Views/AdminAwb/Edit.cshtml
@@ -5,4 +5,4 @@
 <h1>
 	@Pages.AirWaybillEdit
 </h1>
-@Html.EditPage(Url.Action(MVC.AirWaybill.Edit()), Pages.Save, @Html.Action(MVC.AirWaybill.CargoIsCustomsClearedButton((long)ViewBag.AwbId)))
+@Html.EditPage(Url.Action(MVC.AdminAwb.Edit()), Pages.Save, @Html.Action(MVC.AirWaybill.CargoIsCustomsClearedButton((long)ViewBag.AwbId)))
