--- a/Alicargo/Views/AirWaybill/SenderDetails.cshtml
+++ b/Alicargo/Views/AirWaybill/SenderDetails.cshtml
@@ -6,13 +6,13 @@
 		# if(PackingFileName != null){ #
 		<p>
 			<span>@Entities.Packing:</span>
-			<a href="@Url.Action(MVC.AirWaybill.PackingFile())/#= Id #">#= PackingFileName #</a>
+			<a href="@Url.Action(MVC.AwbFile.Packing())/#= Id #">#= PackingFileName #</a>
 		</p>
 		# } #
 		# if(AWBFileName != null){ #
 		<p>
 			<span>@Entities.AWB:</span>
-			<a href="@Url.Action(MVC.AirWaybill.AWBFile())/#= Id #">#= AWBFileName #</a>
+			<a href="@Url.Action(MVC.AwbFile.AWB())/#= Id #">#= AWBFileName #</a>
 		</p>
 		# } #
 	</div>
