--- a/Alicargo/Views/SenderAwb/EditorTemplates/AwbSenderModel.cshtml
+++ b/Alicargo/Views/SenderAwb/EditorTemplates/AwbSenderModel.cshtml
@@ -4,17 +4,13 @@
 
 @helper Files()
 {
-	<hr />
-	<h4>
-		@Pages.Files
-	</h4>
 	<div class="row">
-		<div class="span4">
+		<div class="span6">
 			@Html.LabelFor(x => x.PackingFile)
 			@Helpers.FileUploader(@Html.IdFor(x => x.PackingFile).ToHtmlString(),
 				Model != null ? Model.PackingFileName : null)
 		</div>
-		<div class="span4">
+		<div class="span6">
 			@Html.LabelFor(x => x.AWBFile)
 			@Helpers.FileUploader(@Html.IdFor(x => x.AWBFile).ToHtmlString(), Model != null ? Model.AWBFileName : null)
 		</div>
@@ -24,26 +20,28 @@
 @helper Parameters()
 {
 	<div class="row">
-		<div class="span4">
+		<div class="span3">
 			@Html.EditorWithLabelFor(model => model.Bill)
 			@Html.LabelFor(x => x.BrokerId)
 			@Html.DropDownListFor(x => x.BrokerId, (IDictionary<long, string>)ViewBag.Brokers)
-			@Html.EditorWithLabelFor(model => model.FlightCost)
 		</div>
-		<div class="span4">
+		<div class="span3">
 			@Html.EditorWithLabelFor(model => model.DepartureAirport)
 			@Html.LabelFor(model => model.DateOfDepartureLocalString)
 			<div class="date-holder">
 				@Html.EditorFor(model => model.DateOfDepartureLocalString)
 			</div>
-			@Html.EditorWithLabelFor(model => model.TotalCostOfSenderForWeight)
 		</div>
-		<div class="span4">
+		<div class="span3">
 			@Html.EditorWithLabelFor(model => model.ArrivalAirport)
 			@Html.LabelFor(model => model.DateOfArrivalLocalString)
 			<div class="date-holder">
 				@Html.EditorFor(model => model.DateOfArrivalLocalString)
 			</div>
+		</div>
+		<div class="span3">
+			@Html.EditorWithLabelFor(model => model.FlightCost)
+			@Html.EditorWithLabelFor(model => model.TotalCostOfSenderForWeight)
 		</div>
 		<script>
 			$(function() {
@@ -52,6 +50,5 @@
 		</script>
 	</div>
 }
-
 @Parameters()
 @Files()
