removed email settings from states

--- a/Alicargo/Views/ApplicationList/AdminTemplate.cshtml
+++ b/Alicargo/Views/ApplicationList/AdminTemplate.cshtml
@@ -29,7 +29,7 @@
 }
 @helper AirWaybillButton()
 {
-	<a class="btn btn-inverse" href="@Url.Action(MVC.AirWaybill.Create())/#= Id #">@Pages.AirWaybillAdd</a>
+	<a class="btn btn-inverse" href="@Url.Action(MVC.AdminAwb.Create())/#= Id #">@Pages.AirWaybillAdd</a>
 }
 <div class='grid-details'>
 	<div class="properties">
