--- a/Alicargo/Views/State/EditorTemplates/StateEditModel.cshtml
+++ b/Alicargo/Views/State/EditorTemplates/StateEditModel.cshtml
@@ -11,19 +11,12 @@
 			@Html.EditorWithLabelFor(model => model.Position)
 		</div>
 		<div class="span3">
-			<br />
+			<p>&nbsp;</p>
 			<div class="state-edit-checkbox">
 				@Html.EditorWithLabelFor(x => x.EnableEmailSend)
 			</div>
 		</div>
-		<div class="span3">
-			<br />
-			<div class="state-edit-checkbox">
-				@Html.EditorWithLabelFor(x => x.UseEventTemplate)
-			</div>
-		</div>
 	</div>
-	<hr />
 	<div class="row">
 		<div class="span4">
 			@Html.LabelFor(x => x.Language)
@@ -31,12 +24,6 @@
 		</div>
 		<div class="span4">
 			@Html.EditorWithLabelFor(model => model.LocalizedName)
-		</div>
-	</div>
-	<div class="row">
-		<div class="span12">
-			@Html.EditorWithLabelFor(model => model.Subject)
-			@Html.EditorWithLabelFor(model => model.Body)
 		</div>
 	</div>
 </div>
