--- a/Alicargo/Views/EmailTemplate/EditorTemplates/EventTemplateModel.cshtml
+++ b/Alicargo/Views/EmailTemplate/EditorTemplates/EventTemplateModel.cshtml
@@ -17,7 +17,9 @@
 			<b>
 				@Pages.StateSettings_Recipients:
 			</b>
-			@if(Model.EventType == EventType.BalanceDecreased || Model.EventType == EventType.BalanceIncreased)
+			@if(Model.EventType == EventType.BalanceDecreased 
+				|| Model.EventType == EventType.BalanceIncreased
+				|| Model.EventType == EventType.ClientAdd)
 			{
 				@Html.CheckBoxFor(x => x.Settings.Admin)
 				@Html.LabelFor(x => x.Settings.Admin, Resources.Enums.Admin)
