--- a/Alicargo/Views/ApplicationList/ClientTemplate.cshtml
+++ b/Alicargo/Views/ApplicationList/ClientTemplate.cshtml
@@ -23,51 +23,50 @@
 	</div>
 	<hr />
 	<div class="grid-details-toolbar">
-		<div>
-			@CloseButton()
-			@EditButton()
-			
+		@CloseButton()
+		@EditButton()
+		<div class="files">
 			# if(InvoiceFiles != null){ #
-				# for(var i in InvoiceFiles) { #
-				# var item = InvoiceFiles[i]; #
-				# if(!item || !item.Id) continue; #
-				<a class="btn btn-info" href="@Url.Action(MVC.Files.Download())/#=item.Id#">#= item.Name #</a>
-				# } #
+			# for(var i in InvoiceFiles) { #
+			# var item = InvoiceFiles[i]; #
+			# if(!item || !item.Id) continue; #
+			<a class="btn btn-info" href="@Url.Action(MVC.Files.Download())/#=item.Id#">#= item.Name #</a>
+			# } #
 			# } #
 			# if(SwiftFiles != null){ #
-				# for(var i in SwiftFiles) { #
-				# var item = SwiftFiles[i]; #
-				# if(!item || !item.Id) continue; #
-				<a class="btn btn-info" href="@Url.Action(MVC.Files.Download())/#=item.Id#">#= item.Name #</a>
-				# } #
+			# for(var i in SwiftFiles) { #
+			# var item = SwiftFiles[i]; #
+			# if(!item || !item.Id) continue; #
+			<a class="btn btn-info" href="@Url.Action(MVC.Files.Download())/#=item.Id#">#= item.Name #</a>
+			# } #
 			# } #
 			# if(DeliveryBillFiles != null){ #
-				# for(i in DeliveryBillFiles) { #
-				# var item = DeliveryBillFiles[i]; #
-				# if(!item || !item.Id) continue; #
-				<a class="btn btn-info" href="@Url.Action(MVC.Files.Download())/#=item.Id#">#= item.Name #</a>
-				# } #
+			# for(i in DeliveryBillFiles) { #
+			# var item = DeliveryBillFiles[i]; #
+			# if(!item || !item.Id) continue; #
+			<a class="btn btn-info" href="@Url.Action(MVC.Files.Download())/#=item.Id#">#= item.Name #</a>
+			# } #
 			# } #
 			# if(Torg12Files != null){ #
-				# for(i in Torg12Files) { #
-				# var item = Torg12Files[i]; #
-				# if(!item || !item.Id) continue; #
-				<a class="btn btn-info" href="@Url.Action(MVC.Files.Download())/#=item.Id#">#= item.Name #</a>
-				# } #
+			# for(i in Torg12Files) { #
+			# var item = Torg12Files[i]; #
+			# if(!item || !item.Id) continue; #
+			<a class="btn btn-info" href="@Url.Action(MVC.Files.Download())/#=item.Id#">#= item.Name #</a>
+			# } #
 			# } #
 			# if(CPFiles != null){ #
-				# for(i in CPFiles) { #
-				# var item = CPFiles[i]; #
-				# if(!item || !item.Id) continue; #
-				<a class="btn btn-info" href="@Url.Action(MVC.Files.Download())/#=item.Id#">#= item.Name #</a>
-				# } #
+			# for(i in CPFiles) { #
+			# var item = CPFiles[i]; #
+			# if(!item || !item.Id) continue; #
+			<a class="btn btn-info" href="@Url.Action(MVC.Files.Download())/#=item.Id#">#= item.Name #</a>
+			# } #
 			# } #
 			# if(PackingFiles != null){ #
-				# for(i in PackingFiles) { #
-				# var item = PackingFiles[i]; #
-				# if(!item || !item.Id) continue; #
-				<a class="btn btn-info" href="@Url.Action(MVC.Files.Download())/#=item.Id#">#= item.Name #</a>
-				# } #
+			# for(i in PackingFiles) { #
+			# var item = PackingFiles[i]; #
+			# if(!item || !item.Id) continue; #
+			<a class="btn btn-info" href="@Url.Action(MVC.Files.Download())/#=item.Id#">#= item.Name #</a>
+			# } #
 			# } #
 		</div>
 	</div>
