carrier phone and contcat in email

--- a/Alicargo/Views/EmailTemplate/Help.cshtml
+++ b/Alicargo/Views/EmailTemplate/Help.cshtml
@@ -29,6 +29,8 @@
 		<li>DateOfCargoReceipt - Дата получения груза</li>
 		<li>TransitReference - Транзитный референс</li>
 		<li>CarrierName - Курьер</li>
+		<li>CarrierPhone - Курьер, телефон</li>
+		<li>CarrierContact - Курьер, контакт</li>
 		<li>FactoryEmail - Email фабрики</li>
 		<li>FactoryPhone - Телефон фабрики</li>
 		<li>FactoryContact - Контактное лицо фабрики</li>
