new fields for sender

--- a/Alicargo/Views/EmailTemplate/Help.cshtml
+++ b/Alicargo/Views/EmailTemplate/Help.cshtml
@@ -58,7 +58,10 @@
 		<li>AirWaybillDateOfArrival - Дата прилета</li>
 		<li>AirWaybillGTD - ГТД</li>
 		<li>UploadedFile - Загруженный файл</li>
-		<li>SenderName - Имя отправителя</li>
+		<li>SenderName - Отправитель</li>
+		<li>SenderContact - Отправитель, контакт</li>
+		<li>SenderPhone - Отправитель, телефон</li>
+		<li>SenderAddress - Отправитель, адрес</li>
 		<li>ForwarderName - Имя перевозчика</li>
 	</ul>
 </p>
