renamed CarrierName fields

--- a/Alicargo/Views/ApplicationList/ClientDetails.cshtml
+++ b/Alicargo/Views/ApplicationList/ClientDetails.cshtml
@@ -122,10 +122,10 @@
 	#= TransitDeliveryTypeString #				
 </p>
 # } #			
-# if(TransitCarrierName != null){ #
+# if(CarrierName != null){ #
 <p>
 	<span>@Entities.Carrier:</span>
-	#= TransitCarrierName #				
+	#= CarrierName #				
 </p>
 # } #
 # if(FactoryName != null){ #
