--- a/Alicargo/Views/ApplicationList/AdminDetails.cshtml
+++ b/Alicargo/Views/ApplicationList/AdminDetails.cshtml
@@ -121,10 +121,10 @@
 	#= TransitDeliveryTypeString #
 </p>
 # } #
-# if(TransitCarrierName != null){ #
+# if(CarrierName != null){ #
 <p>
 	<span>@Entities.Carrier:</span>
-	#= TransitCarrierName #
+	#= CarrierName #
 </p>
 # } #
 # if(FactoryName != null){ #
