--- a/Alicargo/Views/ApplicationList/AdminDetails.cshtml
+++ b/Alicargo/Views/ApplicationList/AdminDetails.cshtml
@@ -157,6 +157,12 @@
 	#= FactureCost #
 </p>
 # } #
+# if(FactureCostEx != null){ #
+<p>
+	<span>@Entities.FactureCostEx:</span>
+	#= FactureCostEx #
+</p>
+# } #
 # if(ScotchCost != null){ #
 <p>
 	<span>@Entities.ScotchCost:</span>
