--- a/Alicargo/Views/ApplicationList/ClientDetails.cshtml
+++ b/Alicargo/Views/ApplicationList/ClientDetails.cshtml
@@ -158,6 +158,12 @@
 	#= FactureCost #
 </p>
 # } #
+# if(FactureCostEx != null){ #
+<p>
+	<span>@Entities.FactureCostEx:</span>
+	#= FactureCostEx #
+</p>
+# } #
 # if(TariffPerKg != null){ #
 <p>
 	<span>@Entities.TariffPerKg:</span>
