--- a/Alicargo/Views/ApplicationList/SenderDetails.cshtml
+++ b/Alicargo/Views/ApplicationList/SenderDetails.cshtml
@@ -108,6 +108,12 @@
 	#= FactureCost #
 </p>
 # } #
+# if(FactureCostEx != null){ #
+<p>
+	<span>@Entities.FactureCostEx:</span>
+	#= FactureCostEx #
+</p>
+# } #
 # if(SenderScotchCost != null){ #
 <p>
 	<span>@Entities.ScotchCost:</span>
