--- a/Alicargo/Views/SenderApplication/EditorTemplates/ApplicationSenderModel.cshtml
+++ b/Alicargo/Views/SenderApplication/EditorTemplates/ApplicationSenderModel.cshtml
@@ -16,6 +16,7 @@
 	</div>
 	<div class="span4">
 		@Html.EditorWithLabelFor(model => model.FactureCost)
+		@Html.EditorWithLabelFor(model => model.FactureCostEx)
 		@Html.EditorWithLabelFor(model => model.PickupCost)
 		@Html.EditorWithLabelFor(model => model.Volume)
 	</div>
