--- a/Alicargo/Views/SenderCalculation/Details.cshtml
+++ b/Alicargo/Views/SenderCalculation/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Alicargo.Core.Resources
 <tr class="k-group-sub-footer-gray">
 	<td class='k-group-cell'>&nbsp;</td>
-	<td colspan="14">&nbsp;</td>
+	<td colspan="15">&nbsp;</td>
 </tr>
 <tr class="k-group-sub-footer">
 	<td class='k-group-cell'>&nbsp;</td>
@@ -17,7 +17,8 @@
 	<td class="text-right text-bold" title="@Entities.TotalSenderRate">#= kendo.toString(TotalSenderRate, 'n2') #</td>
 	<td class="text-right text-bold" title="@Entities.TotalScotchCost">#= TotalScotchCost #</td>
 	<td class="text-right text-bold" title="@Entities.FactureCost">#= TotalFactureCost #</td>
-	<td class="text-right text-bold" title="@Entities.PickupCost">#= TotalPickupCost #</td>
+	<td class="text-right text-bold" title="@Entities.FactureCostEx">#= TotalFactureCostEx #</td>
+	<td class="text-right text-bold" title="@Entities.PickupCost">#= TotalPickupCost #</td>	
 	<td class="text-right total" title="@Entities.TotalOfSender">#= kendo.toString(TotalOfSender, 'n2') #</td>
 </tr>
 <tr class="k-group-sub-footer">
@@ -35,10 +36,11 @@
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
+	<td>&nbsp;</td>
 	<td class="text-right total" title="@Entities.FlightCost">#= kendo.toString(FlightCost, 'n2') #</td>
 </tr>
 <tr class="k-group-sub-footer cost-total">
 	<td class='k-group-cell'>&nbsp;</td>
-	<td colspan="13"><b>cost total</b></td>
+	<td colspan="14"><b>cost total</b></td>
 	<td class="text-right total" title="@Entities.Total">#= kendo.toString(Total, 'n2') #</td>
 </tr>
