--- a/Alicargo/Views/Calculation/Details.cshtml
+++ b/Alicargo/Views/Calculation/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Alicargo.Core.Resources
 <tr class="k-group-sub-footer-gray">
 	<td class='k-group-cell'>&nbsp;</td>
-	<td colspan="20">&nbsp;</td>
+	<td colspan="21">&nbsp;</td>
 </tr>
 <tr class="k-group-sub-footer">
 	<td class='k-group-cell'>&nbsp;</td>
@@ -11,8 +11,8 @@
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
-	<td>&nbsp;</td>
 	<td class="text-right" title="@Entities.CostPerKgOfSender">#= kendo.toString(CostPerKgOfSender, 'n2') #</td>
+	<td>&nbsp;</td>
 	<td class="text-right text-bold" title="@Entities.TotalSenderRate">#= kendo.toString(TotalSenderRate, 'n2') #</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
@@ -21,6 +21,7 @@
 	<td class="text-right text-bold" title="@Entities.TotalScotchCost">#= TotalScotchCost #</td>
 	<td>&nbsp;</td>
 	<td class="text-right text-bold" title="@Entities.FactureCost">#= TotalFactureCost #</td>
+	<td class="text-right text-bold" title="@Entities.FactureCostEx">#= TotalFactureCostEx #</td>
 	<td class="text-right text-bold" title="@Entities.PickupCost">#= TotalPickupCost #</td>
 	<td>&nbsp;</td>
 	<td class="text-right total" title="@Entities.TotalOfSender">#= kendo.toString(TotalOfSender, 'n2') #</td>
@@ -37,6 +38,7 @@
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td class="text-right text-bold" title="@Entities.FlightCostPerKg">#= kendo.toString(FlightCostPerKg, 'n2') #</td>
+	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
@@ -69,6 +71,7 @@
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
+	<td>&nbsp;</td>
 	<td class="text-right total" title="@Entities.CustomCost">#= kendo.toString(CustomCost, 'n2') #</td>
 	<td>&nbsp;</td>
 </tr>
@@ -92,12 +95,14 @@
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
+	<td>&nbsp;</td>
 	<td class="text-right total" title="@Entities.BrokerCost">#= kendo.toString(BrokerCost, 'n2') #</td>
 	<td>&nbsp;</td>
 </tr>
 <tr class="k-group-sub-footer">
 	<td class='k-group-cell'>&nbsp;</td>
 	<td><b>insurance</b></td>
+	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
@@ -138,12 +143,14 @@
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
+	<td>&nbsp;</td>
 	<td class="text-right total" title="@Entities.TotalTransitCost">#= kendo.toString(TotalTransitCost, 'n2') #</td>
 	<td>&nbsp;</td>
 </tr>
 <tr class="k-group-sub-footer">
 	<td class='k-group-cell'>&nbsp;</td>
 	<td><b>additional</b></td>
+	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
@@ -168,12 +175,13 @@
 </tr>
 <tr class="k-group-sub-footer cost-total">
 	<td class='k-group-cell'>&nbsp;</td>
-	<td colspan="18"><b>cost total</b></td>
+	<td colspan="19"><b>cost total</b></td>
 	<td class="text-right total" title="@Entities.TotalExpenses">#= kendo.toString(TotalExpenses, 'n2') #</td>
 	<td>&nbsp;</td>
 </tr>
 <tr class="k-group-sub-footer">
 	<td class='k-group-cell'>&nbsp;</td>
+	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
