--- a/Alicargo/Views/EmailTemplate/Help.cshtml
+++ b/Alicargo/Views/EmailTemplate/Help.cshtml
@@ -78,7 +78,9 @@
 		<li>WeightCost - Цена за вес</li>
 		<li>ScotchCost - Цена за скотч</li>
 		<li>InsuranceCost - Страховка</li>
-		<li>FactureCost - Цена за фактура</li>
+		<li>FactureCost - Фактура T1 + Фактура EX-1</li>
+		<li>FactureCostT1 - Фактура T1</li>
+		<li>FactureCostEx - Фактура EX-1</li>
 		<li>TransitCost - Цена за доставку</li>
 		<li>PickupCost - Цена за забор</li>
 		<li>TotalCost - Итого</li>
