--- a/Alicargo/Views/Application/EditorTemplates/ApplicationAdminModel.cshtml
+++ b/Alicargo/Views/Application/EditorTemplates/ApplicationAdminModel.cshtml
@@ -59,6 +59,10 @@
 		@Html.EditorWithLabelFor(model => model.ScotchCostEdited)
 		@Html.EditorWithLabelFor(model => model.TariffPerKg)
 	</div>
+	<div class="span2">
+		@Html.EditorWithLabelFor(model => model.InsuranceRate)
+		@Html.EditorWithLabelFor(model => model.InsuranceRateForClient)
+	</div>
 </div>
 <div>
 	<hr />
