--- a/Alicargo/Views/Calculation/Details.cshtml
+++ b/Alicargo/Views/Calculation/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Alicargo.Core.Resources
 <tr class="k-group-sub-footer-gray">
 	<td class='k-group-cell'>&nbsp;</td>
-	<td colspan="21">&nbsp;</td>
+	<td colspan="22">&nbsp;</td>
 </tr>
 <tr class="k-group-sub-footer">
 	<td class='k-group-cell'>&nbsp;</td>
@@ -19,6 +19,7 @@
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td class="text-right text-bold" title="@Entities.TotalScotchCost">#= TotalScotchCost #</td>
+	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td class="text-right text-bold" title="@Entities.FactureCost">#= TotalFactureCost #</td>
 	<td class="text-right text-bold" title="@Entities.FactureCostEx">#= TotalFactureCostEx #</td>
@@ -38,6 +39,7 @@
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td class="text-right text-bold" title="@Entities.FlightCostPerKg">#= kendo.toString(FlightCostPerKg, 'n2') #</td>
+	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
@@ -72,6 +74,7 @@
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
+	<td>&nbsp;</td>
 	<td class="text-right total" title="@Entities.CustomCost">#= kendo.toString(CustomCost, 'n2') #</td>
 	<td>&nbsp;</td>
 </tr>
@@ -96,12 +99,14 @@
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
+	<td>&nbsp;</td>
 	<td class="text-right total" title="@Entities.BrokerCost">#= kendo.toString(BrokerCost, 'n2') #</td>
 	<td>&nbsp;</td>
 </tr>
 <tr class="k-group-sub-footer">
 	<td class='k-group-cell'>&nbsp;</td>
 	<td><b>insurance</b></td>
+	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
@@ -144,12 +149,14 @@
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
+	<td>&nbsp;</td>
 	<td class="text-right total" title="@Entities.TotalTransitCost">#= kendo.toString(TotalTransitCost, 'n2') #</td>
 	<td>&nbsp;</td>
 </tr>
 <tr class="k-group-sub-footer">
 	<td class='k-group-cell'>&nbsp;</td>
 	<td><b>additional</b></td>
+	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
@@ -175,12 +182,13 @@
 </tr>
 <tr class="k-group-sub-footer cost-total">
 	<td class='k-group-cell'>&nbsp;</td>
-	<td colspan="19"><b>cost total</b></td>
+	<td colspan="20"><b>cost total</b></td>
 	<td class="text-right total" title="@Entities.TotalExpenses">#= kendo.toString(TotalExpenses, 'n2') #</td>
 	<td>&nbsp;</td>
 </tr>
 <tr class="k-group-sub-footer">
 	<td class='k-group-cell'>&nbsp;</td>
+	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
