added senders and carrier contact info to email template

--- a/Alicargo/Views/EmailTemplate/Help.cshtml
+++ b/Alicargo/Views/EmailTemplate/Help.cshtml
@@ -31,7 +31,8 @@
 		<li>CarrierName - Курьер</li>
 		<li>CarrierPhone - Курьер, телефон</li>
 		<li>CarrierContact - Курьер, контакт</li>
-		<li>CarrierContact - Курьер, адресс</li>
+		<li>CarrierAddress - Курьер, адресс</li>
+		<li>CarrierEmail - Курьер, email</li>
 		<li>FactoryEmail - Email фабрики</li>
 		<li>FactoryPhone - Телефон фабрики</li>
 		<li>FactoryContact - Контактное лицо фабрики</li>
@@ -63,6 +64,7 @@
 		<li>SenderContact - Отправитель, контакт</li>
 		<li>SenderPhone - Отправитель, телефон</li>
 		<li>SenderAddress - Отправитель, адрес</li>
+		<li>SenderEmail - Отправитель, email</li>
 		<li>ForwarderName - Имя перевозчика</li>
 	</ul>
 </p>
