--- a/Alicargo/Views/AdminAwb/EditorTemplates/AwbAdminModel.cshtml
+++ b/Alicargo/Views/AdminAwb/EditorTemplates/AwbAdminModel.cshtml
@@ -73,7 +73,7 @@
 		</div>
 		<div class="span3">
 			@Html.LabelFor(x => x.BrokerId)
-			@Html.DropDownListFor(x => x.BrokerId, (IDictionary<long, string>)ViewBag.Brokers)
+			@Html.DropDownListFor(x => x.BrokerId, (IDictionary<long?, string>)ViewBag.Brokers, "")
 			@Html.EditorWithLabelFor(model => model.BrokerCost)
 			@Html.EditorWithLabelFor(model => model.CustomCost)
 		</div>
