--- a/Alicargo/Views/Calculation/Index.cshtml
+++ b/Alicargo/Views/Calculation/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using Alicargo.App_Start.Mvc
-@using Alicargo.Core.Resources
+﻿@using Alicargo.Core.Resources
+@using Alicargo.Mvc
 @using Resources
 @inherits BaseWebViewPage
 <style>
