--- a/Alicargo/Views/EmailTemplate/Edit.cshtml
+++ b/Alicargo/Views/EmailTemplate/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@using Alicargo.App_Start.Mvc
+﻿@using Alicargo.Mvc
 @using Alicargo.MvcHelpers.Extensions
 @using Alicargo.Utilities.Localization
 @using Resources
