--- a/Alicargo/Views/ApplicationList/Index.cshtml
+++ b/Alicargo/Views/ApplicationList/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using Alicargo.App_Start.Mvc
-@using Alicargo.DataAccess.Contracts.Enums
+﻿@using Alicargo.DataAccess.Contracts.Enums
+@using Alicargo.Mvc
 @inherits BaseWebViewPage<ApplicationIndexModel>
 <style>
 	.container {
