--- a/Alicargo/Views/User/Index.cshtml
+++ b/Alicargo/Views/User/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using Alicargo.App_Start.Mvc
-@using Alicargo.DataAccess.Contracts.Enums
+﻿@using Alicargo.DataAccess.Contracts.Enums
+@using Alicargo.Mvc
 @using Resources
 @model RoleType
 <style>
